# Catch-the-letter

./: .dockerignore  .env.example  .env.windows.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.vpn.yml  docker-compose.windows-standalone.yml  docker-compose.windows.yml  docker-compose.yml
browser-worker/: Dockerfile  main.py  requirements.txt
config/: app.example.json  app.example.yaml  google_forms.map.example.json  profile.example.json  rules.example.json  yandex_forms.map.example.json
docs/: API.md  ARCHITECTURE.md
scripts/: check_export_secrets.sh  export_sanitized.sh  smoke_browser_worker.sh  smoke_build.sh  smoke_demo.sh  smoke_llm.sh  smoke_providers.sh  smoke_secrets.sh  smoke_telegram_proxy_host.md
scripts/linux/: start-vpn.sh  start.sh  stop.sh  test.sh
scripts/windows/: setup.ps1  start-llm-docker.ps1  start-llm-native.ps1  start.ps1  stop.ps1  test-ollama.ps1  test.ps1
src/: main.cpp
src/app/: App.cpp  App.h  AttachmentService.cpp  AttachmentService.h  Config.cpp  Config.h  EmailClassificationService.cpp  EmailClassificationService.h  EmailClassifier.cpp  EmailClassifier.h  EmailDecisionEngine.cpp  EmailDecisionEngine.h  EmailIngestionService.cpp  EmailIngestionService.h  FormProviderRouter.cpp  FormProviderRouter.h  FormUnderstandingEngine.cpp  FormUnderstandingEngine.h  NotificationService.cpp  NotificationService.h  ProfileExpansionService.cpp  ProfileExpansionService.h  ProfileFactGraph.cpp  ProfileFactGraph.h  TelegramDialogManager.cpp  TelegramDialogManager.h  TelegramMailController.cpp  TelegramMailController.h  UserProfileLoader.cpp  UserProfileLoader.h  WorkflowEngine.cpp  WorkflowEngine.h
src/domain/: EmailAnalysis.h  Form.h  Message.h  Rule.h  RuleEngine.cpp  RuleEngine.h  UserProfile.h
src/infra/: BrowserWorkerClient.cpp  BrowserWorkerClient.h  GoogleFormsProvider.cpp  GoogleFormsProvider.h  HttpServer.cpp  HttpServer.h  ImapParse.cpp  ImapParse.h  LlmClient.h  MailClient.h  MailClientImap.cpp  MailClientMock.cpp  NoopLlmClient.cpp  OllamaClient.cpp  SqliteStorage.cpp  Storage.h  TelegramBot.cpp  TelegramBot.h  TelegramNotifier.cpp  TelegramNotifier.h  TelegramNotifierMock.cpp  TwilioNotifier.cpp  TwilioNotifier.h  UrlPolicy.cpp  UrlPolicy.h  YandexFormsProvider.cpp  YandexFormsProvider.h
src/util/: Json.h
tests/: test_main.cpp
web/: app.js  index.html  styles.css
